# MFTLib

./: .clang-format  .clang-tidy  .claudeignore  .editorconfig  .gitignore  .npmrc  .plan  .pr-crew-coverage.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Directory.Build.props  LICENSE.txt  LINTER-SETUP.md  MFTLib.sln  MFTLib.sln.DotSettings  README.md  TEST-REPORT.md  native-coverage.runsettings  package-lock.json  package.json
.aislop/: config.yml
.claude/: settings.json
Benchmark/: Benchmark.csproj  BenchmarkRunner.cs  Program.cs  SystemInfo.cs  baseline-before-compact.txt  baseline.txt
ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters
MFTLib.Tests/: .editorconfig  BenchmarkRunnerTests.cs  BrokerDeathTests.cs  BrokerDiagnosticsTests.cs  BrokerLauncherTests.cs  BrokerLiveWatchErrorTests.cs  BrokerProtocolTests.cs  DefaultElevatedEntryRunnerTests.cs  DriveScannerTests.cs  ElevatedEntryPointTests.cs  ElevationProviderTests.cs  ElevationUtilitiesCoverageTests.cs  ElevationUtilitiesTests.cs  (+21 more)
MFTLibNative/: .clang-tidy  CMakeLists.txt  MFTFileRecord.h  MFTLibNative.vcxproj  MFTLibNative.vcxproj.filters  dllmain.cpp  framework.h  internal.h  mft_api.h  ntfs.h  pch.h
MFTLibNative/core/: ntfs_io.cpp  ntfs_io.h  platform.h  platform_posix.cpp  platform_win32.cpp  test_hooks.cpp
MFTLibNative/mft/: mft.cpp  mft.internal.h  mft.ntfs_io.cpp  mft.parse.cpp  mft.parse_core.cpp  mft.records.cpp  mft_internal.h  mft_parse.cpp  mft_parse_core.cpp  mft_records.cpp  mft_synthetic.cpp
MFTLibNative/test/: CMakeLists.txt  linux_smoke_test.cpp
MFTLibNative/tools/: CMakeLists.txt  mft-cli.cpp
MFTLibNative/usn/: usn_journal.cpp
(+106 files in other folders)
